# freetype-java

./: .gitignore  CMakeLists.txt  README.md  pom.xml
src/main/c++/: bitmap.cpp  bitmap_size.cpp  face.cpp  font_bounding_box.cpp  font_char_map.cpp  font_face.cpp  font_matrix.cpp  font_size.cpp  font_size_metrics.cpp  font_vector.cpp  freetype.cpp  glyph_metrics.cpp  glyph_slot.cpp  memory_stack.cpp  memory_util.cpp
src/main/java/me/mat/freetype/: Freetype.java  FreetypeEncoding.java  FreetypeException.java  FreetypeFlags.java  FreetypeImplementation.java  FreetypeLoadTarget.java  FreetypeLoader.java  FreetypeRenderMode.java  FreetypeVersion.java  MemoryUtil.java  NativeImplementation.java  OperatingSystem.java
src/main/java/me/mat/freetype/bitmap/: Bitmap.java  BitmapSize.java
src/main/java/me/mat/freetype/font/: BitmapSize.java  CharMap.java  Face.java  FontBoundingBox.java  FontCharMap.java  FontFace.java  FontMatrix.java  FontSize.java  FontSizeMetrics.java  FontTransform.java  FontVector.java  FreetypeFaceException.java  Size.java
src/main/java/me/mat/freetype/glyph/: FreetypeGlyphException.java  GlyphMetrics.java  GlyphSlot.java
src/main/java/me/mat/freetype/memory/: MemoryStack.java
src/main/java/me/mat/freetype/util/: MemoryUtil.java  NativeImplementation.java  OperatingSystem.java
src/test/java/me/mat/freetype/: CharMapTest.java  FreetypeTest.java  GlyphGenerationTest.java  MemoryStackTest.java
